lerna 初始化， typescript 初始化包

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.1",
   "description": "nicol-ui",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "lerna": "^3.19.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
