--- a/packages/nicolui/package.json
+++ b/packages/nicolui/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nicolui",
-  "version": "1.0.11",
+  "version": "1.0.13",
   "description": "nicol-ui",
   "main": "index.js",
+  "module": "./src/moment.js",
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -17,6 +18,7 @@
     "html-webpack-plugin": "^4.2.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
+    "terser-webpack-plugin": "^3.0.1",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
