--- a/packages/nicolui/package.json
+++ b/packages/nicolui/package.json
@@ -29,6 +29,11 @@
     "dev": "webpack --config ./config/dev.js",
     "build": "webpack --config ./config/pro.js"
   },
+  "files": [
+    "dist",
+    "index.js",
+    "*.d.ts"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Just-Doing/yltui.git"
@@ -41,5 +46,6 @@
   "bugs": {
     "url": "https://github.com/Just-Doing/yltui/issues"
   },
-  "homepage": "https://github.com/Just-Doing/yltui#readme"
+  "homepage": "https://github.com/Just-Doing/yltui#readme",
+  "gitHead": "77cfd7763b368e107a4e3591ac7690841b133db5"
 }
