--- a/packages/searchtable/package.json
+++ b/packages/searchtable/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "searchtable",
+  "name": "sharewinfo-utils",
   "version": "0.0.2",
   "description": "",
   "main": "index.js",
+  "module": "./src/moment.js",
   "scripts": {
     "build": "tsc"
   },
@@ -27,5 +28,5 @@
     "url": "https://github.com/Just-Doing/yltui/issues"
   },
   "homepage": "https://github.com/Just-Doing/yltui#readme",
-  "gitHead": "77cfd7763b368e107a4e3591ac7690841b133db5"
+  "gitHead": "d987d63966c87a5bf3cf14ef46f7013cebd5af48"
 }
