--- a/packages/sharewinfo-utils/package.json
+++ b/packages/sharewinfo-utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sharewinfo-ui",
+  "name": "sharewinfo-utils",
   "version": "0.0.3",
-  "description": "sharewinfo-ui",
+  "description": "sharewinfo-utils",
   "main": "index.js",
   "module": "./src/moment.js",
   "devDependencies": {
