--- a/packages/sharewinfo-utils/package.json
+++ b/packages/sharewinfo-utils/package.json
@@ -1,9 +1,30 @@
 {
   "name": "sharewinfo-utils",
-  "version": "0.0.10",
-  "description": "",
+  "version": "0.0.6",
+  "description": "sharewinfo-utils",
   "main": "index.js",
   "module": "./src/moment.js",
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "Babel": "0.0.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^4.2.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4",
+    "terser-webpack-plugin": "^3.0.1",
+    "typescript": "^3.5.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
   "scripts": {
     "build": "tsc"
   },
@@ -12,9 +33,6 @@
     "index.js",
     "*.d.ts"
   ],
-  "devDependencies": {
-    "typescript": "^3.5.2"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Just-Doing/yltui.git"
@@ -28,5 +46,5 @@
     "url": "https://github.com/Just-Doing/yltui/issues"
   },
   "homepage": "https://github.com/Just-Doing/yltui#readme",
-  "gitHead": "bf5ce30951f69e9e06f6e78047ac9507344c3a5b"
+  "gitHead": "d987d63966c87a5bf3cf14ef46f7013cebd5af48"
 }
