--- a/packages/sharewinfo-ui/package.json
+++ b/packages/sharewinfo-ui/package.json
@@ -20,7 +20,7 @@
     "url": "git+https://github.com/Just-Doing/yltui.git"
   },
   "keywords": [
-    "nicolui"
+    "sharewinfo"
   ],
   "author": "nicol",
   "license": "ISC",
