添加 前端加密

--- a/packages/sharewinfo-utils/package.json
+++ b/packages/sharewinfo-utils/package.json
@@ -28,5 +28,8 @@
     "url": "https://github.com/Just-Doing/yltui/issues"
   },
   "homepage": "https://github.com/Just-Doing/yltui#readme",
-  "gitHead": "b6d956af88a95c01fa6724c200f8d082f3bb8864"
+  "gitHead": "b6d956af88a95c01fa6724c200f8d082f3bb8864",
+  "dependencies": {
+    "jsencrypt": "^3.0.0-rc.1"
+  }
 }
