--- a/packages/sharewinfo-ui/package.json
+++ b/packages/sharewinfo-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sharewinfo-ui",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "",
   "main": "index.js",
   "module": "./src/moment.js",
@@ -28,6 +28,5 @@
     "url": "https://github.com/Just-Doing/yltui/issues"
   },
   "homepage": "https://github.com/Just-Doing/yltui#readme",
-  "gitHead": "b6d956af88a95c01fa6724c200f8d082f3bb8864",
-  "dependencies": {}
+  "gitHead": "b6d956af88a95c01fa6724c200f8d082f3bb8864"
 }
