动态表单 渲染

--- a/packages/sharewinfo-ui/package.json
+++ b/packages/sharewinfo-ui/package.json
@@ -10,7 +10,8 @@
   "files": [
     "dist",
     "index.js",
-    "*.d.ts"
+    "*.d.ts",
+    "style.css"
   ],
   "devDependencies": {
     "typescript": "^3.5.2"
