--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "packages",
   "description": "nicol-packages",
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.0.0-beta.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "father": "^2.29.3",
     "lerna": "^3.19.0",
     "prettier": "^2.0.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "dev": "webpack --config ./config/dev.js",
