--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
-    "babel-loader": "^8.0.0-beta.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.1.0",
     "father": "^2.29.3",
     "lerna": "^3.19.0",
     "prettier": "^2.0.5",
